apt-clone (0.4.2) UNRELEASED; urgency=medium

  * Remove unnecessary XS-Testsuite field in debian/control.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 11 Sep 2018 00:01:56 +0100

apt-clone (0.4.1) unstable; urgency=medium

  * show friendly error message when restore has no source file
    (thanks to Tim Wasser)
  * add new 'apt-clone clone --extra-files "/some/path"' option
    to store arbitrary number of extra files in an apt-clone
    file (and restore them of course)

 -- Michael Vogt <mvo@debian.org>  Fri, 06 Nov 2015 22:48:07 +0100

apt-clone (0.4) unstable; urgency=medium

  [ Michael Vogt ]
  * sync from ubuntu
  * add --exclude option to apt-clone restore

  [ Brian Murray ]
  * save packages with a foreign origin in a separate file

 -- Michael Vogt <mvo@debian.org>  Thu, 05 Nov 2015 10:45:46 +0100

apt-clone (0.3.1~ubuntu14) wily; urgency=medium

  * No-change rebuild for python3.5 transition

 -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 22 Jul 2015 04:08:42 +0000

apt-clone (0.3.1~ubuntu13) vivid; urgency=medium

  * debian/control: updated Vcs-Bzr thanks to Launchpad user majun for the
    patch and the bug report. (LP: #1388328)

 -- Brian Murray <brian@ubuntu.com>  Tue, 13 Jan 2015 16:14:52 -0800

apt-clone (0.3.1~ubuntu12) utopic; urgency=medium

  [ Brian Murray ]
  * Add an option to replace the mirror used in /etc/apt/sources.list with one
    of your choosing. (LP: #1290584)
  * debian/tests/control: add in missing make dependency

  [ Michael Vogt ]
  * Resolve unicode decode error for sources.list files if locale is
    unsupported. (LP: #1309447)

 -- Brian Murray <brian@ubuntu.com>  Wed, 20 Aug 2014 13:54:48 -0700

apt-clone (0.3.1~ubuntu11) trusty; urgency=medium

  * lp:~brian-murray/apt-clone/test_clone_upgrade_ports:
    - fix test failure for ppc64el

 -- Brian Murray <brian@ubuntu.com>  Mon, 24 Feb 2014 08:24:54 -0800

apt-clone (0.3.1~ubuntu10) trusty; urgency=low

  [ Brian Murray ]